--- a/SafeSaves/SafeSaves.csproj
+++ b/SafeSaves/SafeSaves.csproj
@@ -144,7 +144,7 @@ xcopy /S /Y /R "!e:~0,-1!" !modpath2!
 set modpath3="C:\Program Files (x86)\Steam\steamapps\common\TerraTech\LocalMods\Mod Saves"
 
 if exist !modpath3! (
-if $(ConfigurationName) == Steam (
+if $(ConfigurationName) == SteamLone (
 echo Copying to SteamModLocalDirect
 set e=$(TargetDir)&gt;nul
 xcopy /S /Y /R "!e:~0,-1!" !modpath3!
@@ -154,7 +154,7 @@ xcopy /S /Y /R "!e:~0,-1!" !modpath3!
 set modpath4="C:\Program Files (x86)\Steam\steamapps\workshop\content\285920\2765342436"
 
 if exist !modpath4! (
-if $(ConfigurationName) == Steam (
+if $(ConfigurationName) == SteamLone (
 echo Copying to SteamWorkshopLocalDirect
 set e=$(TargetDir)&gt;nul
 xcopy /S /Y /R "!e:~0,-1!" !modpath4!
